# IoT

./: CMakeLists.txt  Jenkinsfile  jenkinsfile  prj.conf  west.yml
boards/: esp32s3_devkitc_procpu.overlay  esp32s3_devkitm_procpu.overlay
src/: CMakeLists.txt  main.c
src/temp/: CMakeLists.txt  temp.c  temp.h
